Get number of students taught by teachers earning more than 1 Lac per month and the sum of their salaries.

--- a/schoolmanager/entity/templates/entity/base.html
+++ b/schoolmanager/entity/templates/entity/base.html
@@ -20,7 +20,8 @@
 
 <nav class="nav flex-column">
   <a class="nav-link active" href="get_class_info">View Classroom</a>
-  <a class="nav-link" href="#">Search Teacher</a>
+  <a class="nav-link" href="search_teacher">Search Teacher</a>
+  <a class="nav-link" href="get_teachers_by_salaries">Get Teachers with salary more than 1 LPA </a>
   <!-- <a class="nav-link" href="#">Link</a> -->
   <!-- <a class="nav-link disabled" href="#">Disabled</a> -->
 </nav>
