--- a/schoolmanager/entity/templates/entity/search_teacher.html
+++ b/schoolmanager/entity/templates/entity/search_teacher.html
@@ -5,7 +5,7 @@
 	{{form}}
 	<input type="submit" name="submit" value="Search">
 </form>
-
+{% if class %}
 <table border="2">
 	<tr>
 		<th>Teacher</th>
@@ -30,4 +30,5 @@
 	</tr>
 	{% endfor %}
 </table>
+{% endif %}
 {% endblock %}
