--- a/schoolmanager/entity/templates/entity/base.html
+++ b/schoolmanager/entity/templates/entity/base.html
@@ -4,34 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Class Room Manager</title>
   </head>
   <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <h1>School Manager</h1>
     <div class="wrapper">
 
-<nav class="nav flex-column">
-  <a class="nav-link active" href="get_class_info">View Classroom</a>
-  <a class="nav-link" href="search_teacher">Search Teacher</a>
-  <a class="nav-link" href="get_teachers_by_salaries">Get Teachers with salary more than 1 LPA </a>
-  <!-- <a class="nav-link" href="#">Link</a> -->
-  <!-- <a class="nav-link disabled" href="#">Disabled</a> -->
-</nav>
+	<nav class="nav flex-column">
+	  <a class="nav-link active" href="get_class_info">View Classroom</a>
+	  <a class="nav-link" href="search_teacher">Search Teacher</a>
+	  <a class="nav-link" href="get_teachers_by_salaries">Get Teachers with salary more than 1 LPA </a>
+	  <a class="nav-link" href="search_subject">Search Subject</a>
+	</nav>
 
     <div id="content">
-        <!-- We'll fill this with dummy content -->
         {% block page %}
   		{% endblock %}
     </div>
 
-</div>       
+	</div>       
   </body>
 </html>
