--- a/schoolmanager/entity/templates/entity/teachers_salaries.html
+++ b/schoolmanager/entity/templates/entity/teachers_salaries.html
@@ -2,7 +2,7 @@
 {% block page %}
 
 <h3>Details of Teachers with salary higher than 1 LPA </h3>
-<table>
+<table border="2">
 	<tr>
 		<th>Teachers </th>
 		<th>No of distinct students</th>
