--- a/schoolmanager/entity/templates/entity/search_subject.html
+++ b/schoolmanager/entity/templates/entity/search_subject.html
@@ -5,7 +5,7 @@
 	{{form}}
 	<input type="submit" name="submit" value="Search">
 </form>
-{% if teacher %}
+{% if teachers %}
 <table border="2">
 	<tr>
 		<th>No. of Teacher</th>
