--- a/entity/templates/entity/base.html
+++ b/entity/templates/entity/base.html
@@ -49,7 +49,7 @@
           <ul class="nav nav-sidebar">
             <li><a href="{% url 'entity:get_class_info' %}" title="view-classroom" style="padding-left:30px">View Classroom</a></li>
             <li><a href="{% url 'entity:search_teacher' %}" title="search-teacher" style="padding-left:30px">Search Teacher</a></li>
-            <li><a href="{% url 'entity:get_teachers_by_salaries' %}" title="teachers-by-salaries" style="padding-left:30px">Get Teachers with salary more than 1 LPA</a></li>
+            <li><a href="{% url 'entity:get_teachers_by_salaries' %}" title="teachers-by-salaries" style="padding-left:30px">Teachers With Salary More Than 1 LPA</a></li>
             <li><a href="{% url 'entity:search_subject' %}" title="search-subject" style="padding-left:30px">Search Subject</a></li>   
           </ul>
         </div>
