--- a/entity/templates/entity/base.html
+++ b/entity/templates/entity/base.html
@@ -38,7 +38,7 @@
      <div class="content">
       <nav class="navbar">
         <div class="container-fluid">
-            <div class="navbar-header">
+            <div class="navbar-header  navbar-inverse navbar-fixed-top">
               <a class="navbar-brand" href="{% url 'home' %}">School Manager</a>
             </div>
         </div>
